log
Thu 13 Apr 2023 10:50:30 PM UTC: 
 tests:  0|6
total_score: 0/70
8867c63
Fri 14 Apr 2023 08:48:02 PM UTC: 
 hashmap.c | 29 +++++++++++++++++------------
 1 file changed, 17 insertions(+), 12 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘hash’:
hashmap.c:33:5: error: ‘ash’ undeclared (first use in this function); did you mean ‘hash’?
   33 |     ash += hash*32 + tolower(*ptr);
      |     ^~~
      |     hash
hashmap.c:33:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1a3ef69
Fri 14 Apr 2023 08:48:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
4d8697f
Fri 14 Apr 2023 08:54:57 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
3e71bdf
Fri 14 Apr 2023 08:56:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a496bc0
Fri 14 Apr 2023 08:58:45 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
e21a3a6
Fri 14 Apr 2023 09:04:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
39ec25f
